# libplacebo_Render

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
src/: dovi_meta.cpp  libplacebo_init.cpp  libplacebo_render.h  mapping.h  params.h  plugin.cpp  render.cpp  utils.h
